# build-system-prototype

./: Makefile  setup.py
lib/: Makefile
lib/forsockets/: .gitignore  Makefile  forsockets.f90
lib/simple_hash/: Makefile  simple_hash.c  simple_hash.h
src/: .gitignore  pyproject.toml
src/amuse/community/: Makefile
src/amuse/community/bhtree/: .gitignore  Makefile  cpu_worker.c  interface.py  support
src/amuse/community/bhtree/amuse-bhtree/: pyproject.toml
src/amuse/community/bhtree/src/: Makefile  bhtree.c
src/amuse/community/bhtree/support/: .gitignore  configure  configure.ac
src/amuse/community/ph4/: .gitignore  Makefile  __init__.py  cpu_worker.c  gpu_worker.c  interface.py  ph4-cpu.amuse_deps  support
src/amuse/community/ph4/amuse-ph4-cpu/: MANIFEST.in  pyproject.toml
src/amuse/community/ph4/amuse-ph4-gpu/: MANIFEST.in
src/amuse/community/ph4/src/: Makefile  ph4.c
src/amuse/community/ph4/support/: config.mk.in  configure  configure.ac
support/: aclocal.m4  amuse.mk  configure  configure.ac  dependencies.mk  features.mk.in  format.mk  help.mk  venv.mk
