[project]
name = "amuse-framework"
version = "2024.04.0"
requires-python = ">=3.7"
dependencies = [
    "docutils>=0.6",
    "numpy>=1.2.2",
    "h5py>=1.1.0"
]

[project.optional-dependencies]
MPI = ["mpi4py>=1.1.0"]

[build-system]
requires = ["setuptools>=45", ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["amuse*"]
exclude = ["amuse.community.*"]
namespaces = false


